--- a/CannonBall.Web/Views/Home/Index.cshtml
+++ b/CannonBall.Web/Views/Home/Index.cshtml
@@ -1,17 +1,21 @@
 ﻿@model CannonBall.Web.ViewModels.GameFlowView
-
+<style type="text/css">
+    .readonly { border-style:none; }
+</style>
 <div>
     @using (Html.BeginForm("Index", "Home", FormMethod.Post))
     {
+        @Html.AntiForgeryToken()
         <h4>The Cannonball Game</h4>
         <hr />
         <dl class="dl-horizontal">
+            <input type="hidden" id="ShotCount" name="ShotCount" value="@Model.ShotsTaken" />
             <dt>
                 @Html.DisplayNameFor(model => model.TargetX)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.TargetX)
+                @Html.TextBoxFor(model => model.TargetX, new { @class = "readonly", @readonly = "readonly" })
             </dd>
 
             <dt>
@@ -19,7 +23,7 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.TargetY)
+                @Html.TextBoxFor(model => model.TargetY, new { @class = "readonly", @readonly = "readonly" })
             </dd>
 
             <dt>
@@ -28,6 +32,7 @@
 
             <dd>
                 @Html.TextBoxFor(model => model.Angle)
+                @Html.ValidationMessageFor(model => model.Angle)
             </dd>
 
             <dt>
@@ -36,14 +41,7 @@
 
             <dd>
                 @Html.TextBoxFor(model => model.Velocity)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.WasTargetHit)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.WasTargetHit)
+                @Html.ValidationMessageFor(model => model.Velocity)
             </dd>
 
             <dt>
@@ -53,11 +51,21 @@
             <dd>
                 @Html.DisplayFor(model => model.ShotsTaken)
             </dd>
-
         </dl>
 
         <br />
-        <input type="submit" value="Take your shot" />
+        if (Model.WasTargetHit)
+        {
+            <div style="color:green">Hit!</div>
+            @Html.ActionLink("New Game", "Index", "Home")
+        }
+        else
+        {
+            <input type="submit" value="Take your shot" />
+            if (IsPost)
+            {
+                <div style="color:red">Missed!</div>
+            }
+        }
     }
 </div>
->
